--- a/package.json
+++ b/package.json
@@ -24,7 +24,13 @@
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.1.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "webpack": "~4.29",
+    "webpack-bundle-analyzer": "~3.0",
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "~3.1",
+    "webpack-hot-middleware": "~2.24",
+    "webpack-merge": "~4.2"
   },
   "eslintConfig": {
     "root": true,
